flex box now resizes to columns on window resize

--- a/style.css
+++ b/style.css
@@ -38,11 +38,10 @@ body {
 
 .buttonContainer {
     display: flex;
-    t
     flex-direction: row;
 }
 
-@media (max-width: 800px) {
+@media screen and (max-width: 800px) {
     .buttonContainer {
       flex-direction: column;
     }
