--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @font-face { font-family: Mario; src: url('SuperMarioBros-ov7d.ttf'); } 
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     font-family: Mario;
     background: url('pixel-art-game-background-grass-sky-clouds_210544-60.jpg') no-repeat center center fixed; 
@@ -8,20 +13,25 @@ body {
     color: rgb(30, 255, 0);
 }
 
+.game-wrapper {
+    background-color: rgba(0,0,0,0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #titleContainer {
-    position: fixed;
-    width: 50%;
-    left: 25%;
-    background-color: rgba(0, 0, 0,.6);
     padding: 30px;
     border-radius: 30%;
+    
 }
 
 #welcome {
+    text-align: center;
     font-size: 2em;
     margin: 15px;
-    text-align: center;
-
 }
 
 #firstToFiveMessage {
@@ -30,35 +40,41 @@ body {
 }
 
 #chooseTitle {
-    font-size: 1vw;
-    position: relative;
-    bottom: 170%;
-    left: 30%;
+    text-align: center;
+    font-size: 2em; 
 }
-
 .buttonContainer {
-    display: flex;
-    flex-direction: row;
+    display: flex;   
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
     .buttonContainer {
+      margin-top: 0px;
+      gap: 0px;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    #titleContainer {
+        font-size: .5em;
+        padding: 5px;
     }
 }
 
 .rock{
-
 }
 
 #rockButton {
+
     border-radius: 10px;
 }
 
 #rockimage {
-    height: 200px;
-    width: 200px;
-    
+    height: 150px;
+    width: 130px;
 }
 
 .paper{
@@ -70,9 +86,8 @@ body {
 }
 
 #paperimage {
-    height: 200px;
-    width: 200px;
-    
+    height: 150px;
+    width: 130px;
 }
 
 .scissors{
@@ -84,26 +99,30 @@ body {
 }
 
 #scissorsimage {
-    height: 200px;
-    width: 200px;
-    
+    height: 150px;
+    width: 130px;
+}
+
+.bottomScoreText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .playagain {
-    position: fixed;
-    left: 45%;
-    top: 77%;
+    border-radius: 10%;
 }
 
+#replayImage {
+    height: 50px;
+    width: 100px;
+}
 #runningScoreText {
-    position: fixed;
-    top: 40%;
-    left: 50%;
+    font-size: 1.5em;
 }
 
 #headingText {
-    position: fixed;
-    top: 50%;
-    lefT: 50%;
+    font-size: 1.5em;
 }
 
