--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 
 body {
     font-family: Mario;
-    background: url('pixel-art-game-background-grass-sky-clouds_210544-60.jpg') no-repeat center center fixed; 
+    background: url('images/pixel-art-game-background-grass-sky-clouds_210544-60.jpg') no-repeat center center fixed; 
     background-size: cover;
     font-size: 16px;
     color: rgb(30, 255, 0);
@@ -50,51 +50,59 @@ body {
 }
 
 #rockButton {
-
+    padding: 0;
+    border: none;
+    background: none;
     border-radius: 10px;
 }
 
 #rockimage {
     height: 150px;
     width: 130px;
+    border-radius: 10px;
 }
 
 #rockButton:hover {
     transform: scale(1.2);
-}
-
-.paper{
-
+    border: 4px solid rgb(30, 255, 0);
+    border-radius: 10px;
 }
 
 #paperButton {
-    border-radius: 10px;
+    padding: 0;
+    border: none;
+    background: none;
 }
 
 #paperButton:hover {
     transform: scale(1.2);
+    border: 4px solid rgb(30, 255, 0);
+    border-radius: 10px;
 }
 
 #paperimage {
+    border-radius: 10px;
     height: 150px;
     width: 130px;
 }
 
-.scissors{
-
-}
-
 #scissorsButton {
+    padding: 0;
+    border: none;
+    background: none;
     border-radius: 10px;
 }
 
 #scissorsButton:hover {
     transform: scale(1.2);
+    border: 4px solid rgb(30, 255, 0);
+    border-radius: 10px;
 }
 
 #scissorsimage {
     height: 150px;
     width: 130px;
+    border-radius: 10px;
 }
 
 .bottomScoreText {
@@ -112,6 +120,7 @@ body {
     height: 50px;
     width: 100px;
 }
+
 #runningScoreText {
     font-size: 1.5em;
 }
