--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 .game-wrapper {
     background-color: rgba(0,0,0,0.3);
+    background-attachment: fixed;
     position: absolute;
     top: 0;
     left: 0;
